--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:text="LOGIN"
         android:textSize="20dp"
         android:id="@+id/login"
+        android:background="@color/legal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
