--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,11 +1,17 @@
 <LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="#bb007a"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="WELCOME STUDENT"
         android:textSize="50dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/logout"
+        android:text="logout"/>
 
 </LinearLayout>
