--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,60 @@
-<LinearLayout android:layout_height="match_parent"
+<ScrollView android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+ <LinearLayout
+     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#00aabb"
+    android:background="@drawable/backgroundstyle"
     xmlns:android="http://schemas.android.com/apk/res/android">
+   <ImageView
+       android:src="@drawable/vjv"
+       android:layout_width="120dp"
+       android:layout_height="120dp"
+       android:layout_margin="15dp"
+       android:background="@drawable/imagecircle"
+       android:layout_gravity="center"/>
     <TextView
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Student id"
         android:textSize="20dp"/>
     <EditText
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/id"/>
     <TextView
+        android:textSize="20dp"
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Password"
         />
     <EditText
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/pass"
         android:inputType="textPassword"/>
     <Button
+        android:layout_margin="15dp"
+        android:textColor="#FFFFFF"
         android:text="LOGIN"
         android:textSize="20dp"
         android:id="@+id/login"
-        android:background="@color/legal"
+        android:background="@drawable/buttonstyles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
+        android:textColor="#FFFFFF"
+        android:layout_margin="15dp"
+        android:background="@drawable/registerstyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/reg"
         android:textSize="20dp"
         android:text="REGISTER"/>
 </LinearLayout>
+</ScrollView>
