--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,5 +56,14 @@
         android:id="@+id/reg"
         android:textSize="20dp"
         android:text="REGISTER"/>
+  <Button
+      android:textSize="20dp"
+      android:textColor="#ffffff"
+      android:layout_margin="15dp"
+     android:background="@drawable/buttonstyles"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/viewusers"
+      android:text="View users"/>
 </LinearLayout>
 </ScrollView>
